--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>My Page</title>
 </head>
 
-<body>
-    <h1>Welcome to my Page</h1>
+<body> 
+	<h1>Welcome to my Page</h1>
+	<h2>This is my GitHub page<h2>
 </body>
 
 </html>
