--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 
 <body> 
 	<h1>Welcome to my Page</h1>
-	<h2>This is my GitHub page<h2>
-	<h3>GO<h3>
+	<h2>This is my GitHub page</h2>
+	<h3>GO</h3>
+	<h4>New Update</h4>
 </body>
 
 </html>
