--- a/index.html
+++ b/index.html
@@ -3,24 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>2D-Game_Portfolio</title>
-    <link rel="stylesheet" href="./style.css" />
+    <title>GitHub Page </title>
   </head>
   <body>
-    <div id="app">
-      <div>
-        <p class="note">Tap/Click around to move</p>
-        <div id="textbox-container" style="display: none">
-          <div id="textbox">
-            <p id="dialogue" class="ui-text"></p>
-            <div class="btn-container">
-              <button id="close" class="ui-close-btn">Close</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <canvas id="game"></canvas>
-    </div>
-    <script type="module" src="src/main.js"></script>
+      <h1>Hello, I am UMMAN2005</h1>
   </body>
 </html>
