--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GitHub Page </title>
+    <title>GitHub Page</title>
   </head>
   <body>
-      <h1>Hello, I am UMMAN2005</h1>
+    <h1>Hello, I am UMMAN2005</h1>
+    <p>Go to my fun <a href="umman2005.github.io/2D-Game_Portfolio/">Portfolio</a></p>
   </body>
 </html>
