--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   </head>
   <body>
     <h1>Hello, I am UMMAN2005</h1>
-    <p>Go to my fun <a href="umman2005.github.io/2D-Game_Portfolio/">Portfolio</a></p>
+    <h3>
+      Go to my fun
+      <a href="https://umman2005.github.io/2D-Game_Portfolio/" target="_blank"
+        >Portfolio</a
+      >
+    </h3>
   </body>
 </html>
